--- a/shared/style/headers/skin.comms.css
+++ b/shared/style/headers/skin.comms.css
@@ -1,24 +1,27 @@
-/* --------------------------------------------------------------------------
+/* -----------------------------------------------------------------
   HEADER SKIN: comms
   .skin-comms will override default values
--------------------------------------------------------------------------- */
+----------------------------------------------------------------- */
 
-.skin-comms section[role="region"] > header:first-child  {
+.skin-comms section[role="region"] > header:first-child,
+section[role="region"].skin-comms > header:first-child {
   background-color: #33cccc;
 }
 
-.skin-comms section[role="region"] > header:first-child > a:not([aria-disabled="true"]):active:after,
-.skin-comms section[role="region"] > header:first-child > button:not(:disabled):active:after,
-.skin-comms section[role="region"] > header:first-child > a:not([aria-disabled="true"]):hover:after,
-.skin-comms section[role="region"] > header:first-child > button:not(:disabled):hover:after,
-.skin-comms section[role="region"] > header:first-child menu[type="toolbar"] a:not([aria-disabled="true"]):hover,
-.skin-comms section[role="region"] > header:first-child menu[type="toolbar"] button:not(:disabled):hover,
-.skin-comms section[role="region"] > header:first-child menu[type="toolbar"] a:not([aria-disabled="true"]):active,
-.skin-comms section[role="region"] > header:first-child menu[type="toolbar"] button:not(:disabled):active {
-  background-color: rgba(0,0,0,0.1);
+.skin-comms section[role="region"] > header:first-child a,
+.skin-comms section[role="region"] > header:first-child button,
+section[role="region"].skin-comms > header:first-child a,
+section[role="region"].skin-comms > header:first-child button {
+  color: rgba(0,0,0,0.5);
 }
 
-.skin-comms section[role="region"] > header:first-child menu[type="toolbar"] a,
-.skin-comms section[role="region"] > header:first-child menu[type="toolbar"] button {
-  color: rgba(0,0,0,0.5);
+.skin-comms section[role="region"] > header:first-child a:active:after,
+.skin-comms section[role="region"] > header:first-child button:active:after,
+.skin-comms section[role="region"] > header:first-child a:hover:after,
+.skin-comms section[role="region"] > header:first-child button:hover:after,
+section[role="region"].skin-comms > header:first-child a:active:after,
+section[role="region"].skin-comms > header:first-child button:active:after,
+section[role="region"].skin-comms > header:first-child a:hover:after,
+section[role="region"].skin-comms > header:first-child button:hover:after {
+  background-color: rgba(0,0,0,0.1);
 }
