--- a/shared/style/headers/skin.comms.css
+++ b/shared/style/headers/skin.comms.css
@@ -4,14 +4,17 @@
 ----------------------------------------------------------------- */
 
 .skin-comms section[role="region"] > header:first-child,
-section[role="region"].skin-comms > header:first-child {
+section[role="region"].skin-comms > header:first-child,
+[is="gaia-header"][skin="comms"] {
   background-color: #33cccc;
 }
 
 .skin-comms section[role="region"] > header:first-child a,
 .skin-comms section[role="region"] > header:first-child button,
 section[role="region"].skin-comms > header:first-child a,
-section[role="region"].skin-comms > header:first-child button {
+section[role="region"].skin-comms > header:first-child button,
+[is="gaia-header"][skin="comms"] a,
+[is="gaia-header"][skin="comms"] button {
   color: rgba(0,0,0,0.5);
 }
 
@@ -22,6 +25,10 @@ section[role="region"].skin-comms > header:first-child button {
 section[role="region"].skin-comms > header:first-child a:active:after,
 section[role="region"].skin-comms > header:first-child button:active:after,
 section[role="region"].skin-comms > header:first-child a:hover:after,
-section[role="region"].skin-comms > header:first-child button:hover:after {
+section[role="region"].skin-comms > header:first-child button:hover:after,
+[is="gaia-header"][skin="comms"] a:active:after,
+[is="gaia-header"][skin="comms"] button:active:after,
+[is="gaia-header"][skin="comms"] a:hover:after,
+[is="gaia-header"][skin="comms"] button:hover:after {
   background-color: rgba(0,0,0,0.1);
 }
