--- a/shared/style/headers/skin.dark.css
+++ b/shared/style/headers/skin.dark.css
@@ -4,14 +4,17 @@
 ----------------------------------------------------------------- */
 
 section[role="region"].skin-dark > header:first-child,
-.skin-dark > section[role="region"] > header:first-child {
+.skin-dark > section[role="region"] > header:first-child,
+[is="gaia-header"][skin="dark"] {
   background-color: #242d33;
 }
 
 .skin-dark section[role="region"] > header:first-child a,
 .skin-dark section[role="region"] > header:first-child button,
 section[role="region"].skin-dark > header:first-child a,
-section[role="region"].skin-dark > header:first-child button {
+section[role="region"].skin-dark > header:first-child button,
+[is="gaia-header"][skin="dark"] a,
+[is="gaia-header"][skin="dark"] button {
   color: #00aac5;
 }
 
@@ -22,12 +25,17 @@ section[role="region"].skin-dark > header:first-child button {
 section[role="region"].skin-dark > header:first-child a:active:after,
 section[role="region"].skin-dark > header:first-child button:active:after,
 section[role="region"].skin-dark > header:first-child a:hover:after,
-section[role="region"].skin-dark > header:first-child button:hover:after {
+section[role="region"].skin-dark > header:first-child button:hover:after,
+[is="gaia-header"][skin="dark"] a:active:after,
+[is="gaia-header"][skin="dark"] button:active:after,
+[is="gaia-header"][skin="dark"] a:hover:after,
+[is="gaia-header"][skin="dark"] button:hover:after {
   background-color: rgba(0,0,0,0.4);
 }
 
 section[role="region"].skin-dark header h2,
-.skin-dark > section[role="region"] header h2 {
+.skin-dark > section[role="region"] header h2,
+[is="gaia-header"][skin="dark"] h2 {
   background-color: #2c353b;
   color: #fff;
   border: none;
