--- a/shared/style/headers/skin.organic.css
+++ b/shared/style/headers/skin.organic.css
@@ -4,19 +4,23 @@
 ----------------------------------------------------------------- */
 
 section[role="region"].skin-organic > header:first-child,
-.skin-organic section[role="region"] > header:first-child {
+.skin-organic section[role="region"] > header:first-child,
+[is="gaia-header"][skin="organic"] {
   background-color: #f4f4f4;
 }
 
 section[role="region"].skin-organic > header:first-child h1,
-.skin-organic section[role="region"] > header:first-child h1 {
+.skin-organic section[role="region"] > header:first-child h1,
+[is="gaia-header"][skin="organic"] h1 {
   color: #868692;
 }
 
 section[role="region"].skin-organic > header:first-child a,
 .skin-organic section[role="region"] > header:first-child a,
+[is="gaia-header"][skin="organic"] a,
 section[role="region"].skin-organic > header:first-child button,
-.skin-organic section[role="region"] > header:first-child button {
+.skin-organic section[role="region"] > header:first-child button,
+[is="gaia-header"][skin="organic"] button {
   color: #00aac5;
 }
 
@@ -45,7 +49,8 @@ section[role="region"].skin-organic > header:first-child .icon.icon-edit,
 }
 
 section[role="region"].skin-organic header h2,
-.skin-organic section[role="region"] header h2 {
+.skin-organic section[role="region"] header h2,
+[is="gaia-header"][skin="organic"] h2 {
   background-color: #e7e7e7;
   color: #4d4d4d;
   border: none;
