--- a/shared/style/headers/skin.default.css
+++ b/shared/style/headers/skin.default.css
@@ -5,19 +5,19 @@
 ----------------------------------------------------------------- */
 
 section[role="region"] > header:first-child,
-[is="gaia-header"] {
+gaia-header {
   color: #fff;
   background-color: #f97c17;
 }
 
 section[role="region"] > header:first-child h1,
-[is="gaia-header"] h1 {
+gaia-header h1 {
   color: #fff;
 }
 section[role="region"] > header:first-child a,
 section[role="region"] > header:first-child button,
-[is="gaia-header"] a,
-[is="gaia-header"] button {
+gaia-header a,
+gaia-header button {
   color: rgba(0,0,0,0.6);
 }
 
@@ -25,15 +25,15 @@ section[role="region"] > header:first-child a:active:after,
 section[role="region"] > header:first-child button:active:after,
 section[role="region"] > header:first-child a:hover:after,
 section[role="region"] > header:first-child button:hover:after,
-[is="gaia-header"] a:active:after,
-[is="gaia-header"] button:active:after,
-[is="gaia-header"] a:hover:after,
-[is="gaia-header"] button:hover:after {
+gaia-header a:active:after,
+gaia-header button:active:after,
+gaia-header a:hover:after,
+gaia-header button:hover:after {
   background-color: rgba(0,0,0,0.07);
 }
 
 section[role="region"] header h2,
-[is="gaia-header"] h2 {
+gaia-header h2 {
   color: #424242;
   border-bottom: solid 0.1rem #e6e6e6;
 }
