--- a/shared/style/headers/skin.organic.css
+++ b/shared/style/headers/skin.organic.css
@@ -5,52 +5,52 @@
 
 section[role="region"].skin-organic > header:first-child,
 .skin-organic section[role="region"] > header:first-child,
-[is="gaia-header"][skin="organic"] {
+gaia-header[data-skin="organic"] {
   background-color: #f4f4f4;
 }
 
 section[role="region"].skin-organic > header:first-child h1,
 .skin-organic section[role="region"] > header:first-child h1,
-[is="gaia-header"][skin="organic"] h1 {
+gaia-header[data-skin="organic"] h1 {
   color: #868692;
 }
 
 section[role="region"].skin-organic > header:first-child a,
 .skin-organic section[role="region"] > header:first-child a,
-[is="gaia-header"][skin="organic"] a,
+gaia-header[data-skin="organic"] a,
 section[role="region"].skin-organic > header:first-child button,
 .skin-organic section[role="region"] > header:first-child button,
-[is="gaia-header"][skin="organic"] button {
+gaia-header[data-skin="organic"] button {
   color: #00aac5;
 }
 
 section[role="region"].skin-organic > header:first-child .icon.icon-back,
 .skin-organic section[role="region"] > header:first-child .icon.icon-back,
-[is="gaia-header"][skin="organic"] [icon="back"]:before {
+gaia-header[data-skin="organic"] [data-icon="back"]:before {
   background-image: url(images/icons/organic/back.svg);
 }
 
 section[role="region"].skin-organic > header:first-child .icon.icon-close,
 .skin-organic section[role="region"] > header:first-child .icon.icon-close,
-[is="gaia-header"][skin="organic"] [icon="close"]:before {
+gaia-header[data-skin="organic"] [data-icon="close"]:before {
   background-image: url(images/icons/organic/close.svg);
 }
 
 section[role="region"].skin-organic > header:first-child .icon.icon-add,
 .skin-organic section[role="region"] > header:first-child .icon.icon-add,
-[is="gaia-header"][skin="organic"] [icon="add"]:before {
+gaia-header[data-skin="organic"] [data-icon="add"]:before {
   background-image: url(images/icons/organic/add.png);
 }
 
 section[role="region"].skin-organic > header:first-child .icon.icon-edit,
 .skin-organic section[role="region"] > header:first-child .icon.icon-edit,
-[is="gaia-header"][skin="organic"] [icon="edit"]:before {
+gaia-header[data-skin="organic"] [data-icon="edit"]:before {
   background-image: url(images/icons/organic/edit.png);
 }
 
 section[role="region"].skin-organic header h2,
 .skin-organic section[role="region"] header h2,
-[is="gaia-header"][skin="organic"] h2 {
+gaia-header[data-skin="organic"] h2 {
   background-color: #e7e7e7;
   color: #4d4d4d;
   border: none;
