--- a/shared/style/headers/skin_dark.css
+++ b/shared/style/headers/skin_dark.css
@@ -4,8 +4,7 @@
 ----------------------------------------------------------------- */
 
 section[role="region"].skin-dark > header:first-child,
-.skin-dark > section[role="region"] > header:first-child,
-gaia-header[data-skin="dark"] {
+.skin-dark > section[role="region"] > header:first-child {
   background-color: #242d33;
 }
 
@@ -26,16 +25,13 @@ section[role="region"].skin-dark > header:first-child a:active:after,
 section[role="region"].skin-dark > header:first-child button:active:after,
 section[role="region"].skin-dark > header:first-child a:hover:after,
 section[role="region"].skin-dark > header:first-child button:hover:after,
-gaia-header[data-skin="dark"] a:active:after,
-gaia-header[data-skin="dark"] button:active:after,
 gaia-header[data-skin="dark"] a:hover:after,
 gaia-header[data-skin="dark"] button:hover:after {
   background-color: rgba(0,0,0,0.4);
 }
 
 section[role="region"].skin-dark header h2,
-.skin-dark > section[role="region"] header h2,
-gaia-header[skin="dark"] h2 {
+.skin-dark > section[role="region"] header h2 {
   background-color: #2c353b;
   color: #fff;
   border: none;
