--- a/shared/style/headers/skin_organic.css
+++ b/shared/style/headers/skin_organic.css
@@ -4,8 +4,8 @@
 ----------------------------------------------------------------- */
 
 section[role="region"].skin-organic > header:first-child,
-.skin-organic section[role="region"] > header:first-child,
-gaia-header[data-skin="organic"] {
+.skin-organic section[role="region"] > header:first-child {
+  color: #868692;
   background-color: #f4f4f4;
 }
 
@@ -16,24 +16,28 @@ gaia-header[data-skin="organic"] h1 {
 }
 
 section[role="region"].skin-organic > header:first-child a,
-.skin-organic section[role="region"] > header:first-child a,
-gaia-header[data-skin="organic"] a,
 section[role="region"].skin-organic > header:first-child button,
+.skin-organic section[role="region"] > header:first-child a,
 .skin-organic section[role="region"] > header:first-child button,
+gaia-header[data-skin="organic"] a,
 gaia-header[data-skin="organic"] button {
   color: #00aac5;
 }
 
+/* ----------------------------------
+  Icons
+---------------------------------- */
+
 section[role="region"].skin-organic > header:first-child .icon.icon-back,
 .skin-organic section[role="region"] > header:first-child .icon.icon-back,
 gaia-header[data-skin="organic"] [data-icon="back"]:before {
-  background-image: url(images/icons/organic/back.svg);
+  background-image: url(images/icons/organic/back.png);
 }
 
 section[role="region"].skin-organic > header:first-child .icon.icon-close,
 .skin-organic section[role="region"] > header:first-child .icon.icon-close,
 gaia-header[data-skin="organic"] [data-icon="close"]:before {
-  background-image: url(images/icons/organic/close.svg);
+  background-image: url(images/icons/organic/close.png);
 }
 
 section[role="region"].skin-organic > header:first-child .icon.icon-add,
@@ -48,9 +52,12 @@ gaia-header[data-skin="organic"] [data-icon="edit"]:before {
   background-image: url(images/icons/organic/edit.png);
 }
 
+/* ----------------------------------
+  Subheader
+---------------------------------- */
+
 section[role="region"].skin-organic header h2,
-.skin-organic section[role="region"] header h2,
-gaia-header[data-skin="organic"] h2 {
+.skin-organic section[role="region"] header h2 {
   background-color: #e7e7e7;
   color: #4d4d4d;
   border: none;
